Fixed bug text overflow and pause button misplace

--- a/Frontend/src/styles/playPause.css
+++ b/Frontend/src/styles/playPause.css
@@ -8,7 +8,7 @@
     outline: 0;
     background: transparent;
     position: absolute;
-    left: 43px;
+    left: 23px;
   }
   
   .play-pause__playhead {
