--- a/Frontend/src/styles/queue.css
+++ b/Frontend/src/styles/queue.css
@@ -1,6 +1,6 @@
 .up-next-container {
     align-self: flex-start;
-    padding: 20px;
+    /* padding: 20px; */
     width: 400px;
     top:var(--music-card-top);
     height: calc(100vh - var(--music-card-top) - 7vh);
